k8s/airflow-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: crypto-streaming

spec:
  replicas: 1

  selector:
    matchLabels:
      app: airflow-scheduler

  template:
    metadata:
      labels:
        app: airflow-scheduler

    spec:
      containers:
        - name: airflow-scheduler
          image: crypto-streaming-platform-airflow:latest
          imagePullPolicy: Never

          command:
            - airflow
            - scheduler
