k8s/airflow-webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: crypto-streaming

spec:
  replicas: 1

  selector:
    matchLabels:
      app: airflow-webserver

  template:
    metadata:
      labels:
        app: airflow-webserver

    spec:
      containers:
        - name: airflow-webserver
          image: crypto-streaming-platform-airflow:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8080

          command:
            - bash
            - -c
            - |
              airflow db migrate &&
              airflow users create --username admin --password admin --firstname Haroon --lastname Ijaz --role Admin --email admin@example.com || true &&
              airflow webserver
