k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-api
  namespace: crypto-streaming

spec:
  replicas: 2

  selector:
    matchLabels:
      app: crypto-api

  template:
    metadata:
      labels:
        app: crypto-api

    spec:
      containers:
        - name: crypto-api
          image: 504429674609.dkr.ecr.us-east-1.amazonaws.com/crypto-api:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
