k8s/spark-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-streaming
  namespace: crypto-streaming

spec:
  replicas: 1

  selector:
    matchLabels:
      app: spark-streaming

  template:
    metadata:
      labels:
        app: spark-streaming

    spec:
      containers:
        - name: spark-streaming
          image: 504429674609.dkr.ecr.us-east-1.amazonaws.com/crypto-spark:latest
          imagePullPolicy: Always
