k8s/airflow-webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver-service
  namespace: crypto-streaming

spec:
  selector:
    app: airflow-webserver

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
