k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: crypto-api-service
  namespace: crypto-streaming

spec:
  type: LoadBalancer

  selector:
    app: crypto-api

  ports:
    - port: 80
      targetPort: 8000
