k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: crypto-api-ingress
  namespace: crypto-streaming
  annotations:
    kubernetes.io/ingress.class: alb

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-api-service
                port:
                  number: 80
